--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	<build>
 		<resources>
 			<resource>
-				<directory>src/main/resources</directory>
+				<directory>src/main</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
