--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: Votifier
-main: com.vexsoftware.votifier.Votifier
-version: maven-version-number
-description: A plugin that gets notified when votes are made for the server on toplists.
-authors: [blakeman8192, Kramer]
+name: ModernVotifier
+main: me.theinfobug.modernvotifier.bukkit.ModernVotifierBukkit
+version: ${project.version}
+description: ${project.description}
+authors: [TheInfoBug]
