--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.theinfobug</groupId>
-	<artifactId>modernvotifier</artifactId>
+	<artifactId>ModernVotifier</artifactId>
 	<version>1.0</version>
 	<name>ModernVotifier</name>
 	<properties>
@@ -35,7 +35,7 @@
 	<build>
 		<resources>
 			<resource>
-				<directory>src/main</directory>
+				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
