--- a/pom.xml
+++ b/pom.xml
@@ -3,41 +3,60 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.theinfobug</groupId>
 	<artifactId>ModernVotifier</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0</version>
 	<name>ModernVotifier</name>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
 	<repositories>
 		<repository>
 			<id>spigotmc-api_repo</id>
 			<name>SpigotMC-API Repository</name>
 			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
 		</repository>
+
 		<repository>
 			<id>sponge-repo</id>
 			<name>SpongePowered-API Repository</name>
 			<url>http://repo.spongepowered.org/Sponge/maven/</url>
 		</repository>
 	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.8.8-R0.1-SNAPSHOT</version>
+			<version>1.11.2-R0.1-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.spongepowered</groupId>
 			<artifactId>spongeapi</artifactId>
-			<version>2.1-SNAPSHOT</version>
+			<version>6.0.0</version>
 		</dependency>
 	</dependencies>
+
 	<build>
 		<resources>
 			<resource>
-				<directory>src/main/resources</directory>
+				<targetPath>.</targetPath>
 				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
